# barca

cli/: Cargo.toml  all-local.wac  cli.wac  cli.wasm  remote-sort.wac  remote.wac
cli/src/: bindings.rs  main.rs
cli/wit/: world.wit
client-hashimap/: Cargo.toml  client_hashimap.wasm
client-hashimap/src/: bindings.rs  lib.rs
client-sorter/: Cargo.toml  client_sorter.wasm
client-sorter/src/: bindings.rs  lib.rs
grain-sorter-service/: exports.gr  imports.gr  imports.gr.wasm  sorter.component.wasm  sorter.embedded.wasm  sorter.gr  sorter.gr.wasm  sorter.wasm
grainmap/: exports.gr  hashimap.component.wasm  hashimap.embedded.wasm  hashimap.gr  hashimap.wasm  hashimap.wit  hashmap.component.wasm  imports.gr
hashimap/: Cargo.toml  hashimap.wasm
hashimap-service/: Cargo.toml  hashimap_service.wasm  service.wac
hashimap-service/src/: bindings.rs  lib.rs
hashimap/src/: bindings.rs  lib.rs
local-sorter/: Cargo.toml  local_sorter.wasm
local-sorter/src/: bindings.rs  lib.rs
shapes/: global.wasm  global.wit  ifaces.wasm  shapes.wasm  wit.toml
sorter-service/: Cargo.toml  sorter_service.wasm
sorter-service/src/: bindings.rs  lib.rs
