[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:cli"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"macovedj:shapes" = "2.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"
