[package]
name = "local-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.21.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:local-sorter"
target = "macovedj:shapes/local-sorter@2.3.0"

[package.metadata.component.dependencies]
