[package]
name = "sorter-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wit-bindgen-rt = "0.21.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:sorter-service"
target = "macovedj:shapes/sorter-service@2.3.0"

[package.metadata.component.dependencies]
